# protonet

./: .CMakeLists.txt.swp  .gitignore  .gitlab-ci.yml  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py  notes.txt
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  lint.cmake  variables.cmake
protonet-core/: CMakeLists.txt  client-wrapper.cpp  client-wrapper.h  client.cpp  client.hpp  core.c  core.h  log.c  log.h  server-wrapper.cpp  server-wrapper.h  server.cpp  server.hpp  utils.cpp  utils.hpp
protonet-core/proto/: client-wrapper.h  client.hpp  core.h  log.h  proto.hpp  server-wrapper.h  server.hpp  utils.hpp
source/: README.md  lib.c  libkqueue.so.0  main.c  main.cpp  notes.txt
source/code/: client.c  core.c  server.c
source/code/Client/: ParserModules.c
source/code/Server/: ParserModules.c  clientManager.c  dataModule.c  tracModule.c
source/code/TP/log/: log.c
source/headers/: .core.h.swp  client.h  core.h  server.h
source/headers/TP/log/: log.h
source/headers/clientModules/: parserModules.h
source/headers/serverModules/: clientModule.h  dataModule.h  parserModules.h  tracModule.h
test/: CMakeLists.txt
test/source/: ProtoNet-linux_test.c  code  headers  libkqueue.so.0  main.c  main.cpp  notes.txt
tests/: CMakeLists.txt  client_connectToNetwork.cpp  client_disconnectFromNetwork.cpp  client_makeFileReq.cpp  core_failCallback.cpp  core_getInterIP.cpp  core_init.cpp  core_sendPck.cpp  server_1C4CS1S.cpp  server_2C1S.cpp  server_2C4CS1S.cpp  server_4C1S.cpp  server_4C4CS1S.cpp  server_re-broadcasting.cpp  server_tracCheck.cpp  server_tracPersistence.cpp
