cmake_minimum_required(VERSION 3.25.1)
project("proto" C)
enable_testing()

if(MINGW)
    message( STATUS "Installing system-libraries: MinGW DLLs." )
    get_filename_component( Mingw_Path ${CMAKE_CXX_COMPILER} PATH )
    set( CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS ${Mingw_Path}/libgcc_s_seh-1.dll ${Mingw_Path}/libstdc++-6.dll ${Mingw_Path}/libwinpthread-1.dll )
endif()

include(InstallRequiredSystemLibraries)

file(GLOB SOURCES "./*.c" "./*.cpp")
add_library(proto SHARED ${SOURCES})
target_compile_definitions(proto PUBLIC MYLIB_EXPORTS)
target_link_libraries(proto uv cryptopp::cryptopp)
target_include_directories(proto PUBLIC "./")
target_compile_features(proto PUBLIC cxx_std_17 c_std_17)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_definitions(proto PUBLIC DEBUG)
    message("-- DEBUG MODE ENABLED")
else()
    if(WIN32)
        install(FILES "${libuv_BIN_DIRS_RELEASE}/libuv.dll" DESTINATION bin)
    else()
        set(CPACK_DEBIAN_PACKAGE_DEPENDS uv)
    endif()
endif()

set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "0")

if(WIN32)
    set(CPACK_GENERATOR "NSIS")
    set(CPACK_NSIS_MODIFY_PATH true)
else()
    set(CPACK_GENERATOR "DEB")
    set(CPACK_DEBIAN_FILE_NAME "DEB-DEFAULT")
    list(APPEND CPACK_DEBIAN_PACKAGE_DEPENDS "libc6, libstdc++6")
    set(CPACK_DEBIAN_PACKAGE_MAINTAINER "acode-pixel")
endif()

set(CPACK_SOURCE_GENERATOR "ZIP")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "Libproto")
set(CPACK_PACKAGE_CHECKSUM SHA256)
install(TARGETS proto DESTINATION bin)
install(FILES proto.hpp server.hpp client.hpp ${libuv_INCLUDE_DIR}/uv.h DESTINATION include)
include(CPack)
